# enviral-win-sanity-suite

./: .gitignore  README.md  agents.md  pyproject.toml  run-main.bat
app/: __init__.py  main.py
app/core/: __init__.py  admin.py  config.py  exec.py  logging.py
app/network/: __init__.py
app/ports/: __init__.py
app/processes/: __init__.py
app/tools/: __init__.py  base.py  hosts.py  network.py  ports.py  processes.py  services.py
app/ui/: __init__.py  layout.py  navigation.py  tabs.py  widgets.py
app/workflows/: __init__.py
rust/: Cargo.toml  build.rs
rust/src/: main.rs
rust/src/state/: mod.rs
rust/src/system/: admin.rs  command.rs  disk.rs  docker.rs  hosts.rs  mod.rs  network.rs  ports.rs  processes.rs  services.rs
rust/src/ui/: app.rs  mod.rs  styles.rs
rust/src/ui/components/: mod.rs  output_panel.rs  sidebar.rs  sortable_table.rs
rust/src/ui/pages/: disk.rs  docker.rs  hosts.rs  mod.rs  network.rs  ports.rs  processes.rs  services.rs
windows_sanity_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workflows/samples/: fix_port_3010.toml  network_reset.toml
