[project]
name = "windows-sanity-suite"
version = "0.1.0"
description = "Desktop utility for common Windows diagnostics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dearpygui>=2.1.0",
    "ping3>=5.1.5",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "pyinstaller>=6.16.0",
    "rich>=14.2.0",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
homepage = "https://example.com/windows-sanity-suite"
repository = "https://example.com/windows-sanity-suite.git"

[tool.uv]
package = true
[tool.uv.sources]
windows-sanity-suite = { workspace = true }

[tool.setuptools]
packages = { find = { include = ["app"] } }
